# HyprCalculator

./: .gitnomore  Cargo.toml  README.md
src/: main  main.rs
